Deleted an unneeded break. Changed padding on mav bar to prevent overflow.

--- a/boots_n_beer_band/public_html/css/ryan_nees.css
+++ b/boots_n_beer_band/public_html/css/ryan_nees.css
@@ -49,7 +49,7 @@ nav li a {
     color: white;
     text-align: center;
     padding-left: 17px;
-    padding-right: 18px;
+    padding-right: 8px;
     text-decoration: none;
 }
  nav li a:hover {
